# ISAR-proofs

./: .gitignore  BasisCompleteness.lean  HFSet.olean  HFSetEncoding.olean  HFSetSemantics.olean  ISAR.olean  InvariantLayer.lean  InvariantLayer.olean  KernelCategory.lean  KernelCategory.olean  LambdaFragment.olean  NOTICE  README.md  TensorSemantics.olean  ViewUnification.lean  ZFCInterpretation.olean  lake-manifest.json  lakefile.lean  ontology_vs_semantics.md  setup.cfg  story.md  verify_isar_ZFC.py
.github/workflows/: blueprint.yml
blueprint/src/: content.tex  extra-styles.css  print.aux  print.tex  web.tex
blueprint/src/chapters/: calculus.tex  category.tex  intro.tex  views.tex
docs/: applications.md  architecture_and_implementation.md  formal_theorems.md  interpretation_reverse_rosetta.md
docs/adr/: ADR-003-scalar-type-split.md
docs/story/: hf_story.md  reverse_rosetta_story.md
home_page/: NOTICE  _config.yml  index.md
home_page/_layouts/: default.html
home_page/assets/css/: style.scss
scratch/: test_derived_s.lean
scripts/: __init__.py  build.py
src/ISAR/: BytecodeView.lean  ISARApproximation.lean  IotaView.lean  QuantityKernel.lean  TRSView.lean  ViewUnification.lean
visualizations/: index.html
zoo/: explorer.html  index.html
zoo/css/: style.css
zoo/js/: main.js
