[metadata]
name = isar-proofs
description = Lean 4 formalization of ISAR representation
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
author = Fabian Schindler
classifiers=
  Programming Language :: Lean :: 4
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires= >=3.8
zip_safe = False
include_package_data = True
install_requires = 
  plasTeX >= 3.1
  plastexshowmore >= 0.0.2
  plastexdepgraph >= 0.0.4
  click
  rich
  rich-click
  tomlkit
  Jinja2 >= 3.1.0
  GitPython >= 3.1.28

[options.entry_points]
console_scripts = 
  isar-build = scripts.build:main